@@ -18,7 +18,6 @@ import com.google.common.collect.Sets;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.List;
 import java.util.Set;
 import java.util.logging.Level;
@@ -29,6 +28,7 @@ import org.sosy_lab.common.log.LogManager;
 import org.sosy_lab.cpachecker.cfa.CFA;
 import org.sosy_lab.cpachecker.cfa.CProgramScope;
 import org.sosy_lab.cpachecker.cfa.DummyScope;
+import org.sosy_lab.cpachecker.cfa.Language;
 import org.sosy_lab.cpachecker.cfa.parser.Scope;
 import org.sosy_lab.cpachecker.core.CPABuilder;
 import org.sosy_lab.cpachecker.cpa.automaton.Automaton;
@@ -70,6 +70,10 @@ public final class Specification {
         if (specProp.getProperty() instanceof LabelledFormula) {
           try {
             LabelledFormula formula = ((LabelledFormula) specProp.getProperty()).not();
+            Scope scope =
+                cfa.getLanguage() == Language.C
+                    ? new CProgramScope(cfa, logger)
+                    : DummyScope.getInstance();
             Automaton automaton =
                 Ltl2BuechiConverter.convertFormula(
                     formula,
@@ -77,11 +81,11 @@ public final class Specification {
                     config,
                     logger,
                     cfa.getMachineModel(),
-                    new CProgramScope(cfa, logger),
+                    scope,
                     pShutdownNotifier);
             return new Specification(
                 pProperties,
-                ImmutableListMultimap.of(Paths.get(""), automaton));
+                ImmutableListMultimap.of(Path.of(""), automaton));
           } catch (InterruptedException e) {
             throw new InvalidConfigurationException(
                 String.format(
@@ -230,7 +234,7 @@ public final class Specification {
     properties = ImmutableSet.of();
     ImmutableListMultimap.Builder<Path, Automaton> multiplePropertiesBuilder =
         ImmutableListMultimap.builder();
-    multiplePropertiesBuilder.putAll(Paths.get(""), ImmutableList.copyOf(pSpecificationAutomata));
+    multiplePropertiesBuilder.putAll(Path.of(""), ImmutableList.copyOf(pSpecificationAutomata));
     pathToSpecificationAutomata = multiplePropertiesBuilder.build();
   }
 
