@@ -29,7 +29,6 @@ import java.io.IOException;
 import java.io.Reader;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -60,7 +59,8 @@ public class AutomatonInternalTest {
   private final LogManager logger;
   private final CParser parser;
 
-  private static final Path defaultSpecPath = Paths.get("test/config/automata/defaultSpecification.spc");
+  private static final Path defaultSpecPath =
+      Path.of("test/config/automata/defaultSpecification.spc");
   private static final CharSource defaultSpec =
       MoreFiles.asCharSource(defaultSpecPath, StandardCharsets.UTF_8);
 
